kube2/ingress/nginx-1/01-ingress-namespace-and-serviceaccount.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
