kube2/ingress/nginx-1/06-training-ingress-object.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: training
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: training-v1
          servicePort: 80
      - path: /v2
        backend:
          serviceName: training-v2
          servicePort: 80
